# MCP-Servers

mcp-discord-server/: .gitignore  README.md  pyproject.toml
mcp-discord-server/src/mcp_discord_server/: __init__.py  server.py
